--- a/client/src/styles/Form.css
+++ b/client/src/styles/Form.css
@@ -1,24 +1,30 @@
 .card {
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.7);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 20px;
     border-radius: 20px;
+    width: 90%;
+    max-width: 600px;
 }
 
 .auth_routes {
     display: flex;
     border: 1px solid rgba(221, 221, 221, 1);
+    justify-content: center;
 }
 
 .auth_routes a {
-    padding: 10px 55px;
+    width: 100%;
+    padding: 10px 10%;
     border-radius: 15px;
     background-color: transparent;
     text-decoration: none;
     color: black;
+    display: flex;
+    justify-content: center;
 }
 
 .auth_routes a.active {
@@ -42,12 +48,18 @@
 .input {
     padding: 10px;
     border-radius: 5px;
-    border: 1px solid #DDDDDD;
+    border: 1px solid rgba(33, 33, 33, .5);
     color: #16161d;
     box-shadow: 1px 5px 9px rgba(211, 211, 211, .7);
     width: 100%;
     margin-bottom: 5px;
     margin-top: 5px;
+}
+
+.input:disabled {
+    background-color: #f2f2f2;
+    color: #999;
+    cursor: not-allowed;
 }
 
 .input:focus {
@@ -100,21 +112,6 @@
     color: red;
 }
 
-.submit-button {
-    font-size: 20px;
-    color: white;
-    border-radius: 15px;
-    border: none;
-    background-color: #003A74;
-    width: 100%;
-    padding: 10px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    background: linear-gradient(-90deg, #003A74, #006AD5);
-    box-shadow: 1px 5px 9px rgba(211, 211, 211, .9);
-    cursor: pointer;
-}
-
 .card a.fp {
     width: 100%;
     display: flex;
@@ -132,4 +129,17 @@
 
 .back-route .back-arrow {
     cursor: pointer;
+}
+
+.textarea {
+    max-width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-right: 8px;
+    resize: none;
+}
+
+.textarea::placeholder {
+    color: black;
 }
