--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -3,35 +3,153 @@
     justify-content: space-between;
     align-items: center;
     background-color: #333;
+    background-color: rgba(33, 33, 33, 0.8);
     color: white;
     padding: 10px 20px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    height: 70px;
 }
 
-.navbar__left img {
+.navbar__left,
+.navbar__center,
+.navbar__right {
+    display: flex;
+    align-items: center;
+}
+
+.navbar__left.not-loged {
+    display: none;
+}
+
+.menu-toggle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: 16px;
+    cursor: pointer;
+    color: #f2f2f2;
+    border-radius: 10%;
+    padding: 20px;
+    font-size: 30px;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.menu-toggle:hover {
+    background-color: white;
+    color: #333;
+    border-color: #ccc;
+    box-shadow: 0 0 10px rgba(0, 106, 213, 1);
+}
+
+.navbar__center img {
     width: 100px;
     height: auto;
 }
 
-.navbar__right ul {
-    list-style: none;
+.profile a .user {
     margin: 0;
-    padding: 0;
+    margin-right: 6px;
+    font-weight: bold;
+    transition: color 0.3s ease;
 }
 
-.navbar__right ul li {
-    display: inline;
-    margin-right: 20px;
+.profile:hover a .user {
+    color: black
 }
 
-.navbar__right ul li:last-child {
-    margin-right: 0;
+.navbar__right {
+    display: flex;
+    align-items: center;
 }
 
-.navbar__right ul li a {
+.navbar__right>div {
+    display: flex;
+    align-items: center;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    padding: 5px 10px;
+    cursor: pointer;
+    font-size: 20px;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
+}
+
+.navbar__right>div:hover {
+    border-color: #ccc;
+    box-shadow: 0 0 10px rgba(0, 106, 213, 1);
+    background-color: white;
+}
+
+.navbar__right>div:first-child {
+    margin-right: 5px;
+}
+
+.navbar__right>div a {
+    margin: 0;
+    font-weight: bold;
+    transition: color 0.3s ease;
+}
+
+.navbar__right>div:hover a {
+    color: black
+}
+
+.profile {
+    display: flex;
+    align-items: center;
+    border: 1px solid transparent;
+    border-radius: 20px;
+    padding: 5px 10px;
+    cursor: pointer;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
+}
+
+.profile:hover {
+    border-color: #ccc;
+    box-shadow: 0 0 10px rgba(0, 106, 213, 1);
+    background-color: white;
+}
+
+.profile a .user h3 {
+    margin: 0;
+    margin-right: 6px;
     color: white;
-    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s ease;
 }
 
-.navbar__right ul li a:hover {
-    color: #ffd700; /* Cambiar color al pasar el ratón */
+.profile:hover a .user h3 {
+    color: #006AD5
+}
+
+.profile a {
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+}
+
+.profile .img-box {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 10px;
+}
+
+.profile .img-box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media screen and (max-width: 768px) {
+    .navbar__right.loged {
+        display: none;
+    }
 }
