--- a/client/src/styles/Post.css
+++ b/client/src/styles/Post.css
@@ -3,10 +3,19 @@
 }
 
 .post-item {
+    background-color: whitesmoke;
     margin-bottom: 20px;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
+}
+
+.post-item {
+    color: black;
+}
+
+.post-item .post-subject {
+    color: black;
 }
 
 .post-header {
@@ -21,7 +30,12 @@
     align-items: center;
 }
 
-.user-profile, .user-profile-comment {
+.user-info img {
+    border-radius: 50%;
+}
+
+.user-profile,
+.user-profile-comment {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -38,12 +52,17 @@
     font-weight: bold;
 }
 
-.subject {
+.post-subject {
     padding: 5px 10px;
     border-radius: 20px;
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
+}
+
+.subject {
+    background-color: rgba(255, 255, 255, 0.5);
+    font-size: 25px;
 }
 
 .post-content {
@@ -52,6 +71,16 @@
 
 .post-title {
     margin-bottom: 5px;
+    margin-right: auto;
+}
+
+.post-actions {
+    display: flex;
+    margin-left: 10px;
+}
+
+.post-actions button {
+    margin-right: 5px;
 }
 
 .post-info {
@@ -62,11 +91,47 @@
     margin-top: 20px;
 }
 
-.comment-item {
-    margin-top: 10px;
+.post-comments {
+    color: black;
 }
 
+.comment-item {
+    margin-top: 10px;
+    position: relative;
+}
+
+.comment-actions {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
+}
+
+.comment-actions button {
+    margin-left: 5px;
+    color: white
+}
+
+.save-button,
+.delete-button {
+    background-color: #fc3565;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 12px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.save-button:hover,
+.delete-button:hover {
+    background-color: #e02d53;
+}
+
+
 .comment-content {
+    max-width: 100%;
     margin-bottom: 5px;
 }
 
@@ -81,9 +146,8 @@
     margin-top: 10px;
 }
 
-.comment-input .input {
+.comment-input .textarea {
     max-width: 100%;
-
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -96,4 +160,42 @@
     height: 200%;
     margin: 0;
     width: auto;
+}
+
+.new-post {
+    width: 60%;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Color de fondo semitransparente */
+    z-index: 100;
+    /* Asegura que esté detrás del modal pero delante de otros elementos */
+}
+
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 18px;
+    border-radius: 8px;
+    z-index: 9999;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
+    max-width: 800px;
+    max-height: 400px;
+    display: flex;
+    overflow: auto;
+}
+
+.modal .new-post {
+    width: 100%;
 }
