--- a/client/src/styles/Subject.css
+++ b/client/src/styles/Subject.css
@@ -10,22 +10,103 @@
     cursor: pointer;
 }
 
-.collapsible-header p {
-    margin: 0;
-}
-
 .collapsible-content {
     padding: 10px;
-}
-
-.collapsible-content p {
-    margin: 5px 0;
 }
 
 .collapsible.active .collapsible-content {
     display: block;
 }
 
-.collapsible.active.collapsible-header {
-    background-color: #f0f0f0;
+.subject-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: bold;
+    color: black;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.post-count {
+    margin-left: 8px;
+    display: flex;
+    align-items: center;
+}
+
+.post-circle {
+    width: 24px;
+    height: 24px;
+    background-color: black;
+    color: white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+}
+
+.subject-collapsible {
+    margin-top: 20px;
+}
+
+.add-subject {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 18px;
+    border-radius: 8px;
+    z-index: 9999;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
+    max-width: 800px;
+    max-height: 400px;
+    display: flex;
+    overflow: auto;
+}
+
+.modal-content {
+    width: 100%;
+}
+
+.close-button:hover {
+    color: #555;
+}
+
+.subject-form {
+    margin-top: 20px;
+}
+
+.subject-form label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.subject-form input[type="text"] {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box;
+}
+
+.subject-form button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    padding: 8px 15px;
+    cursor: pointer;
+}
+
+.subject-form button:hover {
+    background-color: #0056b3;
 }
