--- a/client/src/styles/Form.css
+++ b/client/src/styles/Form.css
@@ -6,7 +6,7 @@
     justify-content: center;
     padding: 20px;
     border-radius: 20px;
-    width: 90%;
+    width: 50%;
     max-width: 600px;
 }
 
@@ -103,6 +103,27 @@
     initial-value: "godd  ";
 }
 
+.color-input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 100px;
+    height: 100px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.color-input::-webkit-color-swatch {
+    border-radius: 15px;
+    border: none;
+}
+
+.color-input::-moz-color-swatch {
+    border-radius: 15px;
+    border: none;
+}
+
 .invalid.label {
     color: red;
 }
@@ -142,4 +163,10 @@
 
 .textarea::placeholder {
     color: black;
+}
+
+@media screen and (max-width: 768px) {
+    .card {
+        width: 80%;
+    }
 }
