--- a/client/src/styles/Profile.css
+++ b/client/src/styles/Profile.css
@@ -21,6 +21,7 @@
     margin-bottom: 10px;
     gap: 8%;
     background-color: rgba(255, 255, 255, 0.5);
+    justify-content: space-between;
     padding: 10px;
     border-radius: 10px;
 }
@@ -50,6 +51,10 @@
 
 .data-secundaria p {
     font-weight: initial;
+}
+
+.posts {
+    width: 100%;
 }
 
 @media screen and (max-width: 768px) {
