--- a/client/src/styles/Subject.css
+++ b/client/src/styles/Subject.css
@@ -6,7 +6,6 @@
 
 .collapsible-header {
     background-color: #f0f0f0;
-    padding: 10px;
     cursor: pointer;
 }
 
@@ -25,6 +24,14 @@
     font-weight: bold;
     color: black;
     background-color: rgba(255, 255, 255, 0.5);
+}
+
+.subject-name {
+    margin-left: 10px;
+}
+
+.subject-extra {
+    display: flex;
 }
 
 .post-count {
@@ -47,6 +54,8 @@
 
 .subject-collapsible {
     margin-top: 20px;
+    width: 90%;
+    max-width: 500px;
 }
 
 .add-subject {
