--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -51,6 +51,8 @@
     height: auto;
 }
 
+
+
 .profile a .user {
     margin: 0;
     margin-right: 6px;
@@ -140,6 +142,8 @@
     border-radius: 50%;
     overflow: hidden;
     margin-right: 10px;
+    border: 1px solid rgba(255, 255, 255, 1);
+    border-radius: 100px;
 }
 
 .profile .img-box img {
