--- a/client/src/styles/Subject.css
+++ b/client/src/styles/Subject.css
@@ -1,11 +1,11 @@
 .collapsible {
-    border: 1px solid #ccc;
     margin-bottom: 10px;
     border-radius: 5px;
 }
 
 .collapsible-header {
     background-color: #f0f0f0;
+    border-radius: 10px;
     cursor: pointer;
 }
 
@@ -20,6 +20,7 @@
 .subject-info {
     display: flex;
     align-items: center;
+    border-radius: 10px;
     justify-content: space-between;
     font-weight: bold;
     color: black;
@@ -73,8 +74,6 @@
     border-radius: 8px;
     z-index: 9999;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
-    width: 100%;
-    height: 100%;
     max-width: 800px;
     max-height: 400px;
     display: flex;
